# moiro_arm

./: README.md
moiro_arm_description/: CMakeLists.txt  package.xml
moiro_arm_description/launch/: display.launch.py  gazebo.launch.py
moiro_arm_description/meshes/: cobot_camera.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
moiro_arm_description/urdf/: materials.xacro  moiro_arm.xacro
moiro_arm_move_group/: CMakeLists.txt  package.xml
moiro_arm_move_group/launch/: moiro_arm_move_group.launch.py  moiro_arm_move_group_service_class_interface.launch.py  moiro_arm_move_group_service_interface.launch.py  moiro_arm_move_group_topic_interface.launch.py
moiro_arm_move_group/src/: moiro_arm_move_group_service.cpp  moiro_arm_move_group_service_class.cpp  moiro_arm_move_group_topic.cpp
moiro_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moiro_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moiro_arm.ros2_control.xacro  moiro_arm.srdf  moiro_arm.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
moiro_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moiro_arm_robot_driver/: package.xml  setup.cfg  setup.py
moiro_arm_robot_driver/moiro_arm_robot_driver/: slider_control.py  sync_play.py
mycobot_description/meshes/: gripper_left3.stl  gripper_right1.stl  gripper_right2.stl  link2.stl  link4.stl  link5.stl
mycobot_movegroup/: CMakeLists.txt  package.xml
mycobot_movegroup/launch/: default_move_group.rviz  mycobot_move_group.launch.py  mycobot_move_group_service_class_interface.launch.py  mycobot_move_group_service_interface.launch.py  mycobot_move_group_topic_interface.launch.py
mycobot_movegroup/src/: mycobot_move_group_service.cpp  mycobot_move_group_service_class.cpp  mycobot_move_group_topic.cpp
mycobot_moveit_config/: .setup_assistant  package.xml
mycobot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moiro.ros2_control.xacro  moiro.srdf  moiro.urdf.xacro  moveit_controllers.yaml  mycobot.urdf.xacro  ompl_planning.yaml  ros2_controllers.yaml
mycobot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mycobot_robot_driver/: setup.py
mycobot_robot_driver/mycobot_robot_driver/: slider_control.py  sync_play.py
src/mycobot/: package.xml
src/mycobot_320/mycobot_320/: package.xml  setup.py
src/mycobot_320/mycobot_320/mycobot_320/: detect_color_box.py  detect_marker.py  sync_play.py
src/mycobot_cube_detect/cube_detect/: package.xml  setup.cfg  setup.py
src/mycobot_cube_detect/cube_detect/cube_detect/: cube_pixel.py  cube_world_pub.py  cubetf.py
src/mycobot_cube_detect/cube_detect/launch/: cubetf.launch.py
src/mycobot_cube_detect/cube_detect/test/: test_tf.cpp
src/mycobot_cube_detect/cube_msg/: CMakeLists.txt  package.xml
src/mycobot_cube_detect/cube_msg/msg/: DetectInfo.msg
src/mycobot_description/meshes/: gripper_base.stl  gripper_left1.stl  gripper_left2.stl  gripper_right3.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
src/mycobot_description/urdf/: mycobot.xacro
src/mycobot_description/urdf/mycobot_320_m5_2022/: mycobot_320_m5_2022.urdf
src/mycobot_movegroup/: CMakeLists.txt  package.xml
src/mycobot_movegroup/launch/: mycobot_move_group_interface.launch.py
src/mycobot_movegroup/src/: mycobot_move_group.cpp  mycobot_move_group_copy.cpp
src/mycobot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/mycobot_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot.ros2_control.xacro  mycobot.srdf  mycobot.srdf.xacro  mycobot320.ros2_control.xacro  mycobot320.srdf  mycobot320.urdf.xacro  ros2_controllers.yaml
src/mycobot_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  mycobot_moveit.launch.py  mycobot_pick_and_place_demo.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/mycobot_moveit/src/: mycobot_mtc_tutorial.cpp
src/mycobot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  mycobot.srdf
src/mycobot_moveit_config/launch/: setup_assistant.launch.py  warehouse_db.launch.py
src/mycobot_mtc_tutorial/: CMakeLists.txt  package.xml
src/mycobot_mtc_tutorial/config/: mycobot_mtc_pick_and_place.rviz  mycobot_mtc_tutorial.rviz
src/mycobot_mtc_tutorial/launch/: mtc_demo.launch.py  mycobot_pick_and_place_demo.launch.py
src/mycobot_mtc_tutorial/src/: mycobot_mtc_node.cpp
src/mycobot_robot_driver/: package.xml
src/mycobot_robot_driver/launch/: slider_control.launch.py
src/mycobot_robot_driver/mycobot_robot_driver/: slider_control.py  sync_play.py
src/pickandplace/: package.xml  setup.cfg  setup.py
src/pickandplace/pickandplace/: cubetf.py
src/pickandplace/test/: hsv_check.py
