<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pickandplace</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alsgk0404@hanyang.ac.kr">minha</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
